# goit-pyweb-11

./: .coverage  .env.example  docker-compose.yml  main.py  pyproject.toml  test.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migration/versions/: 04a3d2e65461_init2.py  3541b1d07e2e_init4.py  47ae1c1876a7_init1.py  d0e065b73a54_init5.py  e59f084f7291_init3.py  f8e75ada94fc_init.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16392  16396  16398  16400  16402  16409  16411  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  (+2 more)
postgres-data/base/16418/: 1247  1249  1259  16419  16421  16426  16427  16429  16431  16434  16436  16438  16440  16443  16445  16450  16452  16454  16459  16461  16463  16466  16468  16470  16475  16477  16482  16484  16491  16493  16505  16506  16507  16520  16522  16534  16535  16536  16544  16545  (+55 more)
postgres-data/global/: 1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  db_16418.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contacts.py  schema.py  users.py
src/services/: auth.py  email.py
src/services/templates/: verify_email.html
tests/: conftest.py  test.db  test_e2e_routes_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
